compiler-project/tests/lexer/invalid/test_exclamation.src
fn main() {
    bool b = !;  // ! with nothing after
    return 0;
}